@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940427
+MANIFEST for ded, version t19940509
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
